# router

./: README.md  debug_results.json  example.py  pyproject.toml
router/: analyze_oracle.py  better_train_router.py  cascade_router_results  cascade_router_results_baseline  oracle_summary.json  run_vllm.py  train_router.py
router/results/: cascade_router_results.json
