[project]
name = "router"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "math-verify[antlr4_13_2]",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.48.2",
    "xgboost>=3.1.1",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "wandb>=0.22.3",
]

[tool.uv.workspace]
members = [
    "router",
]
